// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas para el componente GifGrid Debe mostrar correctamente los elementos 1`] = `
<div>
  <h3>
    ABC
  </h3>
  <div
    className="gif-grid-container"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="LOCAL IMG"
      url="https://localhost/abc.jpg"
    />
    <GifGridItem
      id="DEF"
      key="DEF"
      title="LOCAL DEF"
      url="https://localhost/def.jpg"
    />
  </div>
</div>
`;

exports[`Pruebas para el componente GifGrid Debe mostrarse correctamente 1`] = `
<div>
  <h3>
    Giphy
  </h3>
  Cargando...
  <div
    className="gif-grid-container"
  />
</div>
`;
